Fix title z-index, logo, and mobile white space issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,7 @@ a:visited {
     width: 100%;
     padding-top: 15px;
     padding-bottom: 15px;
+    z-index: 100;
 }
 
 #menu {
@@ -327,7 +328,7 @@ li {
     color: white;
     height: 100%;
     padding-top: 40px;
-    z-index: 999;
+    z-index: 99;
 }
 #home-title b {
     font-weight: 20px;
@@ -726,5 +727,11 @@ figcaption h5 {
     #header {
         margin-top: -80px;
         pointer-events: none;
-    } 
+    }
+    @media screen and (-webkit-min-device-pixel-ratio:0) {
+        #header {
+            position: relative;
+            top: -80px;
+        }
+    }
 }
